rnsc/test_data/integration/error/parser/class_header/trailing_token_recovers.rns
.class MyClass SomethingElse
; SomethingElse is error, but the parser should recover and not report a warning for the missing .super directive